	  kernel mode build; Some regions were overlapping. (2013-03-13).
	* arch/:  Rename g_heapbase to g_idle_topstack.  This is the same value
	  however:  The top of the IDLE stack is the same as the base of the
	  heap in the flat build.  But not in the kernel build:  The base of
	  the heap is elsewhere so the naming was wrong. (2013-03-13).
	* libc/stdlib/lib_itoa.c:  Implementation of itoa() contributed by
	  Ryan Sundberg. (2013-03-14).

6.27 2013-xx-xx Gregory Nutt <gnutt@nuttx.org>

	* arch/arm/src/armv7-m/up_mpu.c:  Correct MPU sub-region settings for
	  unaligned regions (2013-03-15).
	* arch/arm/src/armv6-m/up_svcall.c:  Bring up to equivalent to the
	  ARMv7-M version (2013-03-15).
	* configs/lm4f120-launchpad/tools:  Add scripts and instructions to
	  simplify use of OpenOCD with ICDI (from JP Carballo, 2013-03-15).
	* tools/mkconfig.c:  Logic that attempts to suppressed buffered I/O
	  within the kernel is wrong.  sizeof(struct file_struct) must be
	  the same in both kernel- and user-spaces (2013-03-16).
	* arch/arm/src/common/up_pthread_start.c, libc/pthread/pthread_startup.c,
	  and related files:  Implement switch to user-space and user-space
	  pthread start-up function (2013-03-16).
	* arch/arm/src/common/up_signal_handler.c, libc/pthread/pthread_startup.c,
	  and related files:  Implement switch to user-space and user-space
	  pthread start-up function (2013-03-16).
	* arch/arm/src/common/up_signal_handler.c, libc/signal/signal_handler.c,
	  arch/arm/src/armv[6|7]-m/up_svcall.c, arch/arm/include/armv[6|7]-m/svcall.h,
	  include/nuttx/userspace.h, and sched/sig_deliver.c:  Implement switch
	  to user-space from kernel signal delivery trampoline before calling user-
	  space signal handler.  Return from user-space signal handler using a
	  system call (2013-03-16).
	* arch/arm/src/armv[6|7]-m/up_schedulesigaction.c: Need make sure we are
	  in kernel mode before switching to kernel-mode signal handler
	  trampoline.