@@ -238,18 +238,19 @@ int up_swint0(int irq, FAR void *context)
       case SYS_syscall_return:
         {
           struct tcb_s *rtcb = sched_self();
+          int index = (int)rtcb->xcp.nsyscalls - 1;
 
           /* Make sure that there is a saved syscall return address. */
 
-          DEBUGASSERT(rtcb->xcp.sysreturn != 0);
+          DEBUGASSERT(index >= 0);
 
           /* Setup to return to the saved syscall return address in
            * the original mode.
            */
 
-          current_regs[REG_EPC] = rtcb->xcp.sysreturn;
+          current_regs[REG_EPC] = rtcb->xcp.syscall[index].sysreturn;
 #error "Missing logic -- need to restore the original mode"
-          rtcb->sysreturn       = 0;
+          rtcb->xcp.nsyscalls   = index;
         }
         break;
 #endif
@@ -263,6 +264,7 @@ int up_swint0(int irq, FAR void *context)
         {
 #ifdef CONFIG_NUTTX_KERNEL
           FAR struct tcb_s *rtcb = sched_self();
+          int index = rtcb->xcp.nsyscalls;
 
           /* Verify that the SYS call number is within range */
 
@@ -272,17 +274,20 @@ int up_swint0(int irq, FAR void *context)
            * return address.  We cannot yet handle nested system calls.
            */
 
-          DEBUGASSERT(rtcb->xcp.sysreturn == 0);
+          DEBUGASSERT(index < CONFIG_SYS_NNEST);
 
           /* Setup to return to dispatch_syscall in privileged mode. */
 
-          rtcb->sysreturn              = regs[REG_EPC];
-          regs[REG_EPC]                = (uint32_t)dispatch_syscall;
+          rtcb->xcpsyscall[index].sysreturn = regs[REG_EPC];
+#error "Missing logic -- Need to save mode"
+          rtcb->xcp.nsyscalls  = index + 1;
+
+          regs[REG_EPC] = (uint32_t)dispatch_syscall;
 #error "Missing logic -- Need to set privileged mode"
 
           /* Offset R0 to account for the reserved values */
 
-          current_regs[REG_R0]        -= CONFIG_SYS_RESERVED;
+          current_regs[REG_R0] -= CONFIG_SYS_RESERVED;
 #else
           slldbg("ERROR: Bad SYS call: %d\n", regs[REG_A0]);
 #endif
