@@ -4356,4 +4356,9 @@
 	  system call (2013-03-16).
 	* arch/arm/src/armv[6|7]-m/up_schedulesigaction.c: Need make sure we are
 	  in kernel mode before switching to kernel-mode signal handler
-	  trampoline.
+	  trampoline (2013-03-16).
+	* arch/arm/include/armv[6|7]-m/irq.h, and arch/arm/src/armv[6|7]-m/up_svcall.c:
+	  Add support for nested system calls.  In the current design, this can
+	  happen only under one condition: When the kernel system function calls
+	  back into user space in order to allocate user space memory.  So it is
+	  expected that the maximum nesting level will be only 2.
